amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/wrong-directive-target.api.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/wrong-directive-target.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 2

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-directive-location
  Message: Directive location SOMETHING is invalid
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/wrong-directive-target.api.graphql#/declares/MyDirective
  Property: 
  Range: [(13,0)-(13,85)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#antlr-error
  Message: Syntax error in the following text: 'SOMETHING'
  Severity: Violation
  Target: 
  Property: 
  Range: [(13,26)-(13,35)]
  Location: 
